fixed overflow bug in 'Separator'

--- a/src/Components/Separator/Separator.module.css
+++ b/src/Components/Separator/Separator.module.css
@@ -7,16 +7,14 @@
 
 /* bodyReverse */
 .bodyReverse{
-    display: flex;
     flex-direction: row-reverse;
-    width: 100%;
-    height: 250px;
 }
 
 /* separatorImage */
 .separatorImage{
     width: 500px;
     height: 250px;
+    overflow: hidden;
 }
 
 .separatorImage img{
@@ -38,7 +36,7 @@
 }
 
 .textBody h2{
-    margin: 0;
+    margin: 10px 0 0 0;
 }
 
 .textBody p{
@@ -68,12 +66,11 @@
         justify-content: center;
         align-items: center;
         flex-direction: column-reverse;
-        height: 350px;
+        width: 100%;
+        height: 450px;
     }
 
     .bodyReverse{
-        justify-content: center;
-        align-items: center;
         flex-direction: column-reverse;
         height: auto;
     }
@@ -83,6 +80,11 @@
         object-fit: none;
         width: 100%;
         max-width: 520px;
+    }
+
+    .separatorImage img{
+        width: auto;
+        max-width: none;
     }
 
     /* textContainer */
