--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -5,7 +5,8 @@
     justify-content: space-between;
     align-items: center;
     height: 100vh;
-    max-height: 800px;
+    min-height: 900px;
+    max-height: 1080px;
 }
 
 /* productCarousel */
